# COpenClaw

./: .env.example  .gitignore  README.md  copilot-mcp-config.json  install.bat  install.ps1  install.sh  pyproject.toml
docs/: continuous_improvement_task_type.md
scripts/: configure.py  start-windows.ps1
src/copenclaw/: cli.py
src/copenclaw/core/: audit.py  backup.py  config.py  disclaimer.py  gateway.py  logging_config.py  mcp_registry.py  names.py  pairing.py  policy.py  rate_limit.py  repair.py  router.py  scheduler.py  session.py  task_events.py  tasks.py  templates.py  updater.py  worker.py
src/copenclaw/integrations/: copilot_cli.py  signal.py  slack.py  teams.py  teams_auth.py  teams_provision.py  telegram.py  whatsapp.py
src/copenclaw/mcp/: protocol.py  server.py
templates/: orchestrator.md  supervisor.md  worker.md
tests/: test_audit.py  test_copilot_cli_sessions.py  test_copilot_cli_timeout.py  test_copilot_cli_unknown_option.py  test_e2e_worker.py  test_gateway_restart.py  test_health.py  test_install_bat.py  test_mcp_jobs.py  test_policy.py  test_router.py  test_scheduler.py  test_task_events.py  test_tasks.py  test_updater.py
